@@ -2,6 +2,7 @@
 # eXe 
 # Copyright 2004-2005, University of Auckland
 # Copyright 2007 Tairawhiti Polytechnic
+# Copyright 2004-2007 eXe Project, New Zealand Tertiary Education Commission
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -18,7 +19,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 # ===========================================================================
 """
-This class transforms an eXe node into a page on a self-contained website
+This class transforms an eXe node into a page of iPod Notes
 """
 
 import logging
